sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:13: error: 'while' expected but '}' found.
  }}
   ^AlgCombSort:17: error: illegal start of simple expression
}
^