sort.basic.comb.AlgCombSort.scala.code
def combSort()  {
  var ecart:Int = getNombreValeurs -1
  var a:Int=1;
  do { a=0;
    for (i<- 0 to getNombreValeurs - ecart -1 ) {
       if (plusPetit(i+ecart,i)) {
         echange(i,i+ecart);
         a=a+1
       }
    }
    ecart = (ecart.toDouble / 1.3).toInt ;
  }}
   while (a!=0 || ecart >= 1) 